--- a/app/src/index.html
+++ b/app/src/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="app">
+    <iframe src="" frameborder="0"></iframe>
+    <!-- <div id="app">
         <input type="text" v-model="newPageName">
         <button v-on:click="createPage">Создать страницу</button>
         <div v-for="page in pageList">
             <h1>{{ page }} <a href="#" v-on:click="deletePage(page)">X</a></h1>
         </div> 
-    </div>
+    </div> -->
     
     <script src="bundle.js"></script>
 </body>
